$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- add additional image type "generic-pc-serial"; same as generic-pc
  but with forced serial console (at the speed that the BIOS set it to)

- reintroduced original FreeBSD if_re driver (to fix missing support
  for 8139C+) and added Realtek patched driver under a new name
  (if_rg) with probe return value set to BUS_PROBE_VENDOR to ensure
  that the Realtek patched driver is only used if the stock FreeBSD
  if_re/if_rl can't handle the device

- Fixup for sla-id being 0

1.33b1
------

- add LAN NAT and NAT target of WAN IP options

- updated kernel patch for ipfilter 4.1.33

- fix dnswatch to deal with changed resolv.conf

- Fix for DHCP-PD, missing function.
  add sla-id and sla-len option for dhcp-pd (ipv6).  Add AICCU to interface status page.
  add error handling to interface status page for AICCU being down.

- fixed DHCPv6 server setup when target interface is configured in 6to4 mode
  (reported by Brian Lloyd)

- fixed various XSS vulnerabilities in webGUI

- add ipv6 support for syslog destination

- add ipv6 support for Diagnostics:Firewall States

- initial support for dhcp-pd ipv6 lan assignment , requires /usr/local/sbin/dhcp6c and
  /etc/dhcp6c-exit-hooks

- fix typo in dns-rebind description

- change dns-rebind to off by default, updated text description of this feature

- fix extra slash in captive portal redirect

- replaced if_re driver by Realtek customized version to support
  RTL8111C (among others)

- add support for (manually updated) CRLs for IPsec VPN
  (contributed by Sebastian Lemke)

- prevent /ext directory from being listed through webGUI
  (reported by Bernd Strehhuber)

- fix typo in system_do_extensions() that broke extensions support
  (reported by Bernd Strehhuber)

- make dnsmasq use --stop-dns-rebind by default to increase security and