@@ -3,6 +3,9 @@ $Id$
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
 
+- disallow webGUI passwords with colons (:) as mini_httpd has trouble
+  handling them
+
 - add additional image type "generic-pc-serial"; same as generic-pc
   but with forced serial console (at the speed that the BIOS set it to)
 
